# skynet

./: .gitignore  .gitmodules  CJSON.md  CMakeLists.txt  Makefile
.github/workflows/: build-release.yml  build.yml
3rd/lua/: lauxlib.c  ldebug.c
3rd/lua-protobuf/: pb.c
3rd/posix/: unistd.c  unistd.h
examples/: agent.lua  client.lua  config  config.cjson  config.exlusive  config.userlog  main.lua  main_exlusive.lua  protodef.lua  watchdog.lua
lualib/: log.lua  lproto.lua  skynet.lua
lualib-src/: lua-bson.c  lua-clientsocket.c  lua-clonefunc.c  lua-cluster.c  lua-datasheet.c  lua-netpack.c  lua-skynet.c  lua-socket.c  lua-vscdebugaux.c
lualib-src/sproto/: lsproto.c  sproto.h
lualib/skynet/: hotfix.lua  sharetable.lua  socket.lua  vscdebug.lua
service/: bootstrap.lua  cdummy.lua  cslave.lua  debug_console.lua  launcher.lua  log.lua
service-src/: service_gate.c  service_harbor.c  service_logger.c  service_snlua.c
skynet-src/: atomic.h  malloc_hook.c  rwlock.h  skynet.h  skynet_imp.h  skynet_main.c  skynet_malloc.h  skynet_module.c  skynet_mq.c  skynet_mq.h  skynet_server.c  skynet_server.h  skynet_socket.c  skynet_socket.h  skynet_start.c  skynet_timer.c  socket_poll.h  socket_server.c  socket_wepoll.h  spinlock.h  threads.h  threads_posix.h  threads_win.h
vs/: build.bat  skynet.def  skynet.sln  skynet.vcxproj  skynet.vcxproj.filters
vs/3rd/: lpeg.vcxproj  lpeg.vcxproj.filters  lua-cjson.def  lua-cjson.vcxproj  lua-cjson.vcxproj.filters  lua-protobuf.def  lua-protobuf.vcxproj  lua-protobuf.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  luafilesystem.def  luafilesystem.filters  luafilesystem.vcxproj  md5.def  md5.vcxproj  md5.vcxproj.filters  pb.vcxproj  posix.def  posix.vcxproj  posix.vcxproj.filters
vs/lualib/: bson.def  bson.vcxproj  bson.vcxproj.filters  clientsocket.vcxproj  clientsocket.vcxproj.filters  skynet.def  skynet.vcxproj  skynet.vcxproj.filters  sproto.def  sproto.vcxproj  sproto.vcxproj.filters
vs/output/bson/Debug/: bson.ilk  bson.so.recipe  vc143.idb
vs/output/bson/Debug/bson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  bson.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
vs/output/lpeg/Debug/: lpeg.ilk  lpeg.so.recipe  vc143.idb
vs/output/lpeg/Debug/lpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
vs/output/lua/Debug/: lua.dll.recipe
vs/output/main/Debug/: skynet.exe.recipe
vs/output/md5/Debug/: md5.ilk  md5.so.recipe  vc143.idb
vs/output/md5/Debug/md5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
vs/output/posix/Debug/: posix.dll.recipe
vs/output/sproto/Debug/: sproto.ilk  sproto.so.recipe  vc143.idb
vs/output/sproto/Debug/sproto.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
vs/service/: gate.vcxproj  gate.vcxproj.filters  harbor.vcxproj  harbor.vcxproj.filters  logger.vcxproj  logger.vcxproj.filters  snlua.def  snlua.vcxproj  snlua.vcxproj.filters
windows/: premake5.lua
windows/posix/: unistd.c  unistd.h
windows/posix/sys/: socket.h
windows/vsdef/: gate.def  logger.def  skynet.def
windows/vsdef/cservice/: harbor.def
windows/vsdef/luaclib/: client.def  skynet.def
